...
        android:drawableStart="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_portfolio"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:dividerHeight="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="none"
...
